.darktext fix color contrast

--- a/style/_checkbox.scss
+++ b/style/_checkbox.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
 
     p {
-        color: $dark-grayish-blue;
+        color: #A4ACB7;
         font-weight: 700;
         font-size: .9rem;
     }
