--- a/style/style.css
+++ b/style/style.css
@@ -75,7 +75,7 @@ header .heading_followers_container p {
   justify-content: space-between;
 }
 .theme_toggle_wrapper p {
-  color: rgb(99, 104, 126);
+  color: #A4ACB7;
   font-weight: 700;
   font-size: 0.9rem;
 }
